config-service/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  labels:
    app: config-service
spec:
  ports:
    -
      name: config-service
      port: 80
      targetPort: 8888
  selector:
    app: config-service
